Make Learning English default to wordbook and clarify middle-school branding

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0f172a" />
     <link rel="icon" type="image/svg+xml" href="%BASE_URL%favicon.svg" />
-    <title>AIYuMe English</title>
+    <title>AIYuMe Learning English（中学生向け単語帳アプリ）</title>
   </head>
   <body>
     <div id="root"></div>
